--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small class= "top-nav-bar"> Amuwo Odofin, Lagos, Nigerian</small>
+                    <small class= "top-nav-bar" style="color:white" > Amuwo Odofin, Lagos, Nigerian</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 05.00 PM</small>
+                    <small style="color:white" >Mon - Fri : 09.00 AM - 05.00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -68,7 +68,7 @@
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:orangered" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:orangered" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:white" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:orangered" href=""><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-square btn-link rounded-0" style= "color:orangered" href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -95,7 +95,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+           <!--     <a href="service.html" class="nav-item nav-link">Service</a>
                 <a href="project.html" class="nav-item nav-link">Project</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -106,8 +106,8 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div>  -->
+                <a href="contact.html" class="nav-item nav-link">Contact</a> 
             </div>
             <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -138,8 +138,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Pioneers Of Solar And Renewable Energy</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h1 class="display-2 text-white animated slideInDown">Powering Up with Renewable Energy: Secure Your Future Today</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We are leading the charge for renewable energy penetration into the rural communities</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
@@ -152,8 +152,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Pioneers Of Solar And Renewable Energy</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h1 class="display-2 text-white animated slideInDown">CCTV Installations</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Secure your home with our range of surveillance and security solutions</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/whysolar.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/img-600x400-1.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
@@ -229,12 +229,12 @@
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Why Go Solar?</h1>
                         <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste.<span id="dots">...</span><span id="moreRead"> This means that solar energy is a renewable energy source, meaning it will never run out</span> 
-			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-1 px-3 mt-3">Read More</a></p>
+
                         <p><i class="fa fa-check-circle text-primary me-3">Safe & Reliable</i>:</p><p>Take control of your power production.Solar energy is clean and green. 
 				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity.<span id="dots">...</span><span id="moreRead"> Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p></span>
-                        <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="moreRead"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
+                        <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bill and power remote areas that don’t have access to other forms of energy</p>
 
-			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Read More</a>
+			<!--<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Read More</a>-->
                     </div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-1.jpg" alt="">
+                        <img class="img-fluid" src="img/img-600x400-5.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
                                 <i class="fa fa-building fa-3x"></i>
